--- a/publication/de-simone-2011/cite.bib
+++ b/publication/de-simone-2011/cite.bib
@@ -1,5 +1,7 @@
 @article{DeSimone2011,
+ abstract = {Ulysses, launched on 6 October 1990, was placed in an elliptical, high inclined (80.2) orbit around the Sun, and was switched off in June 2009. It has been the only spacecraft exploring high-latitude regions of the inner heliosphere. The Kiel Electron Telescope (KET) aboard Ulysses measures electrons from 3 MeV to a few GeV and protons and helium in the energy range from 6 MeV/nucleon to above 2 GeV/nucleon. The PAMELA (Payload for Antimatter Matter Exploration and Light-nuclei Astrophysics) space borne experiment was launched on 15 June 2006 and is continuously collecting data since then. The apparatus measures electrons, positrons, protons, anti-protons and heavier nuclei from about 100 MeV to several hundreds of GeV. Thus the combination of Ulysses and PAMELA measurements is ideally suited to determine the spatial gradients during the extended minimum of solar cycle 23. For protons in the rigidity interval 1.6–1.8 GV we find a radial gradient of 2.7%/AU and a latitudinal gradient of− 0.024%/degree. Although the latitudinal gradient is as expected negative, its value is much smaller than predicted by current particle propagation models. This result is of relevance for the study of propagation parameters in the inner heliosphere.},
  author = {De Simone, N. and Di Felice, V. and Gieseler, J. and Boezio, M. and Casolino, M. and Picozza, P. and Heber, B. and Adriani, O. and Barbarino, G.C. and Bazilevskaya, G.A. and Bellotti, R. and Bogomolov, E.A. and Bonechi, L. and Bongi, M. and Bonvicini, V. and Borisov, S. and Bottai, S. and Bruno, A. and Cafagna, F. and Campana, D. and Carbone, R. and Carlson, P. and Castellini, G. and Consiglio, L. and De Pascale, M.P. and De Santis, C. and Galper, A.M. and Gillard, W. and Grishantseva, L. and Hofverberg, P. and Jerse, G. and Karelin, A.V. and Koldashov, S.V. and Krutkov, S.Y. and Kvashnin, A.N. and Leonov, A. and Malvezzi, V. and Marcelli, L. and Martucci, M. and Mayorov, A.G. and Menn, W. and Mikhailov, V.V. and Mocchiutti, E. and Monaco, A. and Mori, N. and Nikonov, N. and Osteria, G. and Palma, F. and Papini, P. and Pearce, M. and Pizzolotto, C. and Ricci, M. and Ricciarini, S.B. and Rossetto, L. and Simon, M. and Sparvoli, R. and Spillantini, P. and Stozhkov, Y.I. and Vacchi, A. and Vannuccini, E. and Vasilyev, G. and Voronov, S.A. and Wu, J. and Yurkin, Y.T. and Zampa, G. and Zampa, N. and Zverev, V.G.},
+ doi = {10.5194/astra-7-425-2011},
  journal = {Astrophysics and Space Sciences Transactions},
  number = {3},
  pages = {425-434},
