--- a/publication/gieseler-2007/cite.bib
+++ b/publication/gieseler-2007/cite.bib
@@ -1,9 +1,11 @@
 @article{Gieseler2007,
+ abstract = {The radial gradient of galactic cosmic rays in the inner heliosphere is studied, using the 125 to~ 200 MeV/n Helium channel from the Kiel Electron Telescope aboard Ulysses and the 147-198 MeV/n carbon channel from the Cosmic Ray Isotope Spectrometer aboard ACE. The time period from 1997 to 2006 covers the solar minima in the A> 0-solar magnetic epoch, the solar magnetic reversal to an A< 0-magnetic epoch at solar maximum and the declining phase of solar cycle 23. We determined the radial gradient between Ulysses and Earth by assuming that the radial gradient is the same during 1998 and 2004, when Ulysses was at a radial distance of about 5 AU. The analyses for the time period from 1997 to 2006, when the spacecraft was below 30 S, resulted in a radial gradient of Gr= 4.5±0.6%/AU, which is consistent with previous measurements.},
  author = {Gieseler, J. and Heber, B. and Dunzlaff, P. and Mu Ller-Mellin, R. and Klassen, A. and Gomez-Herrero, R. and Kunow, H. and Wimmer-Schweingruber, R. and Mewaldt, R.A.},
  journal = {Proceedings of the 30th International Cosmic Ray Conference, ICRC 2007},
  number = {SH},
  pages = {571-574},
  title = {The radial gradient of galactic cosmic rays: Ulysses KET and ACE CRIS Measurements},
+ url = {http://articles.adsabs.harvard.edu/pdf/2008ICRC....1..571G},
  volume = {1},
  year = {2007}
 }
