--- a/publication/gieseler-2013/cite.bib
+++ b/publication/gieseler-2013/cite.bib
@@ -1,7 +1,9 @@
 @article{Gieseler2013,
+ abstract = {The spacecraft Ulysses was launched in October 1990 in the maximum phase of solar cycle 22, reached its final, highly inclined (80.2°) Keplerian orbit around the Sun in February 1992, and was finally switched off in June 2009. The Kiel Electron Telescope (KET) aboard Ulysses measures electrons from 3 MeV to a few GeV and protons and helium in the energy range from 6 MeV/nucleon to above 2 GeV/nucleon. Because the Ulysses measurements reflect not only the spatial but also the temporal variation of the energetic particle intensities, it is essential to know the intensity variations for a stationary observer in the heliosphere. This was accomplished in the past with the Interplanetary Monitoring Platform-J (IMP 8) until it was lost in 2006. Fortunately, the satellite-borne experiment PAMELA (Payload for Antimatter Matter Exploration and Light-nuclei Astrophysics) was launched in June 2006 and can be used as a reliable 1 AU baseline for measurements of the KET aboard Ulysses. Furthermore, we show that measurements of higher nuclei by the Advanced Composition Explorer (ACE), launched 1997 and still operating, can also be used as an extended baseline and to improve the analysis. With these tools at hand, we have the opportunity to determine the spatial gradients of galactic cosmic ray (GCR) protons between several tenth MeV to a few GeV in the inner heliosphere during the extended minimum of solar cycle 23. },
  author = {Gieseler, J. and Boezio, M. and Casolino, M. and De Simone, N. and Felice, V.D. and Heber, B. and Martucci, M.},
  journal = {Proceedings of the 33rd International Cosmic Rays Conference, ICRC 2013},
- title = {Inner heliosphere spatial gradients of gcr protons in the low gev range},
+ title = {Inner heliosphere spatial gradients of GCR protons in the low GeV range},
+ url = {http://articles.adsabs.harvard.edu/pdf/2013ICRC...33..323G},
  volume = {2013-October},
  year = {2013}
 }
