--- a/publication/gieseler-2017/cite.bib
+++ b/publication/gieseler-2017/cite.bib
@@ -1,5 +1,7 @@
 @article{Gieseler2017,
+ abstract = {On their way through the heliosphere, galactic cosmic rays (GCRs) are modulated by various effects before they can be detected at Earth. This process can be described by the Parker equation, which calculates the phase space distribution of GCRs depending on the main modulation processes: convection, drifts, diffusion, and adiabatic energy changes. A first-order approximation of this equation is the force field approach, reducing it to a one-parameter dependency, the solar modulation potential ϕ. Utilizing this approach, it is possible to reconstruct ϕ from ground-based and spacecraft measurements. However, it has been shown previously that ϕ depends not only on the local interstellar spectrum (LIS) but also on the energy range of interest. We have investigated this energy dependence further, using published proton intensity spectra obtained by PAMELA and heavier nuclei measurements from IMP-8 and ACE/CRIS. Our results show severe limitations at lower energies including a strong dependence on the solar magnetic epoch. Based on these findings, we will outline a new tool to describe GCR proton spectra in the energy range from a few hundred MeV to tens of GeV over the last solar cycles. In order to show the importance of our modification, we calculate the global production rates of the cosmogenic radionuclide 10 Be which is a proxy for the solar activity ranging back thousands of years.},
  author = {Gieseler, J. and Heber, B. and Herbst, K.},
+ doi = {10.1002/2017JA024763},
  journal = {Journal of Geophysical Research: Space Physics},
  number = {11},
  pages = {10,964-10,979},
