--- a/publication/gieseler-2020/cite.bib
+++ b/publication/gieseler-2020/cite.bib
@@ -1,4 +1,5 @@
 @article{Gieseler2020,
+ abstract = {The Radiation Monitor (RADMON) on-board Aalto-1 CubeSat is an energetic particle detector that fulfills the requirements of small size, low power consumption and low budget. Aalto-1 was launched on 23 June 2017 to a sun-synchronous polar orbit with 97.4° inclination and an average altitude of somewhat above 500 km. RADMON has been measuring integral particle intensities from October 2017 to May 2018 with electron energies starting at low-MeV and protons from 10 MeV upwards. In this paper, we present first electron and proton intensity maps obtained over the mission period. In addition, the response of RADMON measurements to magnetospheric dynamics are analyzed, and the electron observations are compared with corresponding measurements by the PROBA-V/EPT mission. Finally, we describe the RADMON data set, which is made publicly available.},
  author = {Jan Gieseler and Philipp Oleynik and Heli Hietala and Rami Vainio and Hannu-Pekka Hedman and Juhani Peltonen and Arttu Punkkinen and Risto Punkkinen and Tero Säntti and Edward Hæggström and Jaan Praks and Petri Niemelä and Bagus Riwanto and Nemanja Jovanovic and M. Rizwan Mughal},
  doi = {10.1016/j.asr.2019.11.023},
  journal = {Advances in Space Research},
