--- a/publication/heber-2015/cite.bib
+++ b/publication/heber-2015/cite.bib
@@ -1,4 +1,5 @@
 @article{Heber2015,
+ abstract = {Neutron monitors (NMs) are ground-based devices to measure the variation of cosmic ray intensities, and although being reliable they have two disadvantages: their size as well as their weight. As consequence, [1] suggested the development of a portable, and thus much smaller and lighter, calibration neutron monitor that can be carried to any existing station around the world [see 2; 3]. But this mini neutron monitor, moreover, can also be installed as an autonomous station at any location that provides ''office" conditions such as a) temperatures within the range of around 0 to less than 40 degree C as well as b) internet and c) power supply. However, the best location is when the material above the NM is minimized. In 2011 a mini Neutron Monitor was installed at the Neumayer III station in Antarctica as well as the German research vessel Polarstern, providing scientific data since January 2014 and October 2012, respectively. The Polarstern, which is in the possession of the Federal Republic of Germany represented by the Ministry of Education and Research and operated by the Alfred Wegener Institute, Helmholtz Centre for Polar and Marine Research and managed by the shipping company Laeisz, was specially designed for working in the polar seas and is currently one of the most sophisticated polar research vessels worldwide. It spends almost 310 days a year at sea usually being located in the waters of Antarctica between November and March while spending the northern summer months in Arctic waters. Therefore, the vessel scans the rigidity range below the atmospheric threshold and above 10 GV twice a year. In contrast to spacecraft measurements NM data are influenced by variations of the geomagnetic field as well as the atmospheric conditions. Thus, in order to interpret the data a detailed knowledge of the instrument sensitivity with geomagnetic latitude (rigidity) and atmospheric pressure is essential. In order to determine the atmospheric response data from the Neumayer III station here we will perform comparisons to other polar stations, resulting in an atmospheric pressure coefficient of 7.5‰/hPa, while the rigidity dependence will be determined experimentally by utilizing several latitude scans. Thereby, the atmospheric pressure and temperature correction will be discussed in more detail and the results of the latitude scan performed between October 2012 and March 2013 will be presented. Moreover, we will show that this latitude scan can also be described by using the yield function of [4].},
  author = {Heber, B. and Galsdorf, D. and Herbst, K. and Gieseler, J. and Labrenz, J. and Schwerdt, C. and Walter, M. and Benadé, G. and Fuchs, R. and Krüger, H. and Moraal, H.},
  doi = {10.1088/1742-6596/632/1/012057},
  journal = {Journal of Physics: Conference Series},
