--- a/publication/oleynik-2020/cite.bib
+++ b/publication/oleynik-2020/cite.bib
@@ -1,4 +1,5 @@
 @article{Oleynik2020,
+ abstract = {RADMON is a small radiation monitor designed and assembled by students of University of Turku and University of Helsinki. It is flown on-board Aalto-1, a 3-unit CubeSat in low Earth orbit at about 500 km altitude. The detector unit of the instrument consists of two detectors, a Si solid-state detector and a CsI(Tl) scintillator, and utilizes the ΔE-E technique to determine the total energy and species of each particle hitting the detector. We present the results of the on-ground and in-flight calibration campaigns of the instrument, as well as the characterization of its response through extensive simulations within the Geant4 framework. The overall energy calibration margin achieved is about 5%. The full instrument response to protons and electrons is presented and the issue of proton contamination of the electron channels is quantified and discussed.},
  author = {Philipp Oleynik and Rami Vainio and Arttu Punkkinen and Oleksiy Dudnik and Jan Gieseler and Hannu-Pekka Hedman and Heli Hietala and Edward Hæggström and Petri Niemelä and Juhani Peltonen and Jaan Praks and Risto Punkkinen and Tero Säntti and Eino Valtonen},
  doi = {10.1016/j.asr.2019.11.020},
  journal = {Advances in Space Research},
