--- a/publication/palmroth-2019/cite.bib
+++ b/publication/palmroth-2019/cite.bib
@@ -1,5 +1,7 @@
 @article{Palmroth2019,
+ abstract = {Today, the near‐Earth space is facing a paradigm change as the number of new spacecraft is literally skyrocketing. Increasing numbers of small satellites threaten the sustainable use of space, as without removal, space debris will eventually make certain critical orbits unusable. A central factor affecting small spacecraft health and leading to debris is the radiation environment, which is unpredictable due to an incomplete understanding of the near‐Earth radiation environment itself and its variability driven by the solar wind and outer magnetosphere. This paper presents the FORESAIL‐1 nanosatellite mission, having two scientific and one technological objectives. The first scientific objective is to measure the energy and flux of energetic particle loss to the atmosphere with a representative energy and pitch angle resolution over a wide range of magnetic local times. To pave the way to novel model‐in situ data comparisons, we also show preliminary results on precipitating electron fluxes obtained with the new global hybrid‐Vlasov simulation Vlasiator. The second scientific objective of the FORESAIL‐1 mission is to measure energetic neutral atoms of solar origin. The solar energetic neutral atom flux has the potential to contribute importantly to the knowledge of solar eruption energy budget estimations. The technological objective is to demonstrate a satellite deorbiting technology, and for the first time, make an orbit maneuver with a propellantless nanosatellite. FORESAIL‐1 will demonstrate the potential for nanosatellites to make important scientific contributions as well as promote the sustainable utilization of space by using a cost‐efficient deorbiting technology.},
  author = {Palmroth, M. and Praks, J. and Vainio, R. and Janhunen, P. and Kilpua, E.K.J. and Afanasiev, A. and Ala-Lahti, M. and Alho, A. and Asikainen, T. and Asvestari, E. and Battarbee, M. and Binios, A. and Bosser, A. and Brito, T. and Dubart, M. and Envall, J. and Ganse, U. and Ganushkina, N.Y. and George, H. and Gieseler, J. and Good, S. and Grandin, M. and Haslam, S. and Hedman, H.-P. and Hietala, H. and Jovanovic, N. and Kakakhel, S. and Kalliokoski, M. and Kettunen, V.V. and Koskela, T. and Lumme, E. and Meskanen, M. and Morosan, D. and Mughal, M.R. and Niemelä, P. and Nyman, S. and Oleynik, P. and Osmane, A. and Palmerio, E. and Peltonen, J. and Pfau-Kempf, Y. and Plosila, J. and Polkko, J. and Poluianov, S. and Pomoell, J. and Price, D. and Punkkinen, A. and Punkkinen, R. and Riwanto, B. and Salomaa, L. and Slavinskis, A. and Säntti, T. and Tammi, J. and Tenhunen, H. and Toivanen, P. and Tuominen, J. and Turc, L. and Valtonen, E. and Virtanen, P. and Westerlund, T.},
+ doi = {10.1029/2018JA026354},
  journal = {Journal of Geophysical Research: Space Physics},
  number = {7},
  pages = {5783-5799},
