--- a/publication/heber-2009/cite.bib
+++ b/publication/heber-2009/cite.bib
@@ -1,5 +1,7 @@
 @article{Heber2009,
+ abstract = {During the latest Ulysses out-of-ecliptic orbit the solar wind density, pressure, and magnetic field strength have been the lowest ever observed in the history of space exploration. Since cosmic ray particles respond to the heliospheric magnetic field in the expanding solar wind and its turbulence, the weak heliospheric magnetic field as well as the low plasma density and pressure are expected to cause the smallest modulation since the 1970s. In contrast to this expectation, the galactic cosmic ray (GCR) proton flux at 2.5 GV measured by Ulysses in 2008 does not exceed the one observed in the 1990s significantly, while the 2.5 GV GCR electron intensity exceeds the one measured during the 1990s by 30%–40%. At true solar minimum conditions, however, the intensities of both electrons and protons are expected to be the same. In contrast to the 1987 solar minimum, the tilt angle of the solar magnetic field has remained at about 30° in 2008. In order to compare the Ulysses measurements during the 2000 solar magnetic epoch with those obtained 20 years ago, the former have been corrected for the spacecraft trajectory using latitudinal gradients of 0.25% deg−1 and 0.19% deg−1 for protons and electrons, respectively, and a radial gradient of 3% AU−1. In 2008 and 1987, solar activity, as indicated by the sunspot number, was low. Thus, our observations confirm the prediction of modulation models that current sheet and gradient drifts prevent the GCR flux to rise to typical solar minimum values. In addition, measurements of electrons and protons allow us to predict that the 2.5 GV GCR proton intensity will increase by a factor of 1.3 if the tilt angle reaches values below 10°.},
  author = {Heber, B. and Kopp, A. and Gieseler, J. and Müller-Mellin, R. and Fichtner, H. and Scherer, K. and Potgieter, M.S. and Ferreira, S.E.S.},
+ doi = {10.1088/0004-637X/699/2/1956},
  journal = {Astrophysical Journal},
  number = {2},
  pages = {1956-1963},
