--- a/publication/kuehl-2015/cite.bib
+++ b/publication/kuehl-2015/cite.bib
@@ -1,7 +1,9 @@
 @article{Kuehl2015,
+ abstract = {The solar modulation of galactic cosmic rays (GCR) can be studied in detail by long term vari-ations of the GCR energy spectrum (e.g.  on the scales of a solar cycle).  With almost 20 yearsof data, the Electron Proton Helium INstrument (EPHIN) aboard SOHO is well suited for thesekind of investigations. Although the design of the instrument is optimized to measure proton andhelium isotope spectra up to 50 MeV/nucleon the capability exists that allow to determine energyspectra up to above 300 MeV/nucleon. Therefore we developed a sophisticated inversion methodto calculate such proton spectra.  The method relies on a GEANT4 Monte Carlo simulation ofthe instrument and a simplified spacecraft model that calculates the energy response function ofEPHIN for electrons, protons and heavier ions. In order to determine the energy spectra the result-ing inversion problem is solved numerically.  As a result we present galactic cosmic ray spectrafrom 2006-2009.  For validation, the derived spectra are compared to those determined by thePAMELA instrument.},
  author = {Kühl, P. and Dresing, N. and Gieseler, J. and Heber, B. and Klassen, A.},
  journal = {Proceedings of Science},
  title = {Galactic cosmic ray quiet time spectra from 300 MeV up to above 1 GeV measured with SOHO/EPHIN},
+ url = {https://pos.sissa.it/236/224/pdf},
  volume = {30-July-2015},
  year = {2015}
 }
