Added pdfs to publications

--- a/publication/heber-2008/cite.bib
+++ b/publication/heber-2008/cite.bib
@@ -1,7 +1,7 @@
 @article{Heber2008,
  abstract = {Ulysses, launched in 1990 October in the maximum phase of solar cycle 22, completed its third out-of-ecliptic orbit in 2008 February. This provides a unique opportunity to study the propagation of cosmic rays over a wide range of heliographic latitudes during different levels of solar activity and different polarities in the inner heliosphere. Comparison of the first and second fast latitude scans from 1994 to 1995 and from 2000 to 2001 confirmed the expectation of positive latitudinal gradients at solar minimum versus an isotropic Galactic cosmic ray distribution at solar maximum. During the second scan in mid-2000, the solar magnetic field reversed its global polarity. From 2007 to 2008, Ulysses made its third fast latitude scan during the declining phase of solar cycle 23. Therefore, the solar activity is comparable in 2007-2008 to that from 1994 to 1995, but the magnetic polarity is opposite. Thus, one would expect to compare positive with negative latitudinal gradients during these two periods for protons and electrons, respectively. In contrast, our analysis of data from the Kiel Electron Telescope aboard Ulysses results in no significant latitudinal gradients for protons. However, the electrons show, as expected, a positive latitudinal gradient of ~0.2% per degree. Although our result is surprising, the nearly isotropic distribution of protons in 2007-2008 is consistent with an isotropic distribution of electrons from 1994 to 1995.},
  author = {Heber, B. and Gieseler, J. and Dunzlaef, P. and Gòmez-Herrero, R. and Klassen, A. and Müller-Mellin, R. and Mewaldt, R.A. and Potgieter, M.S. and Ferreira, S.E.S.},
- doi = {2008ApJ...689.1443H},
+ doi = {10.1086/592596},
  journal = {Astrophysical Journal},
  number = {2},
  pages = {1443-1447},
