--- a/publication/kouloumvakos-2022b/cite.bib
+++ b/publication/kouloumvakos-2022b/cite.bib
@@ -3,7 +3,10 @@
         title = "{The effect of shock wave properties on the release timings of solar energetic particles}",
       journal = {Astronomy \& Astrophysics},
      keywords = {Sun: coronal mass ejections, Sun: particle emission},
-         year = 2022,
-        month = oct,
+         year = 2023,
+       volume = 669,
+        pages = "A58",
+          url = "https://doi.org/10.1051/0004-6361/202244363",
           doi = {10.1051/0004-6361/202244363}
 }
+
